--- a/README
+++ b/README
@@ -1,9 +1,7 @@
-# install python
-# install pip
+install python
+install pip
 
-# for flask run in virtual env:
-
-# pip install -r requirements.txt
-# pip freeze > requirements.txt
+pip install -r requirements.txt
+pip freeze > requirements.txt
 
 
